log/build_2025-01-04_00-22-51/mypkg/stdout_stderr.log
running egg_info
writing build/mypkg/mypkg.egg-info/PKG-INFO
writing dependency_links to build/mypkg/mypkg.egg-info/dependency_links.txt
writing entry points to build/mypkg/mypkg.egg-info/entry_points.txt
writing requirements to build/mypkg/mypkg.egg-info/requires.txt
writing top-level names to build/mypkg/mypkg.egg-info/top_level.txt
reading manifest file 'build/mypkg/mypkg.egg-info/SOURCES.txt'
writing manifest file 'build/mypkg/mypkg.egg-info/SOURCES.txt'
running build
running build_py
copying mypkg/cpu_monitor.py -> /home/natsu/robosys2024-ros2/build/mypkg/build/lib/mypkg
running install
running install_lib
copying /home/natsu/robosys2024-ros2/build/mypkg/build/lib/mypkg/cpu_monitor.py -> /home/natsu/robosys2024-ros2/install/mypkg/lib/python3.8/site-packages/mypkg
byte-compiling /home/natsu/robosys2024-ros2/install/mypkg/lib/python3.8/site-packages/mypkg/cpu_monitor.py to cpu_monitor.cpython-38.pyc
  File "/home/natsu/robosys2024-ros2/install/mypkg/lib/python3.8/site-packages/mypkg/cpu_monitor.py", line 18
    cpu_load = psutil.cpu_percent(interval=None, 2)
                                                 ^
SyntaxError: positional argument follows keyword argument

running install_data
running install_egg_info
removing '/home/natsu/robosys2024-ros2/install/mypkg/lib/python3.8/site-packages/mypkg-0.0.0-py3.8.egg-info' (and everything under it)
Copying build/mypkg/mypkg.egg-info to /home/natsu/robosys2024-ros2/install/mypkg/lib/python3.8/site-packages/mypkg-0.0.0-py3.8.egg-info
running install_scripts
Installing cpu_monitor script to /home/natsu/robosys2024-ros2/install/mypkg/lib/mypkg
writing list of installed files to '/home/natsu/robosys2024-ros2/build/mypkg/install.log'
